# ollama__telegram_bot

./: .env.example  .gitignore  README.md  com.mmovsesyan.ollama-telegram-bot.plist  install.sh  install_auto.sh  install_service.sh  local.ollama-telegram-bot.plist  main.py  ollama-telegram-bot.service  pyproject.toml  run.sh  setup_env.py  update.sh
bot/: __init__.py  bot.py  db.py  security.py  settings.py  states.py  tasks_exec.py
bot/handlers/: smart.py  voice.py
bot/intent/: context.py  executor.py  router.py  schemas.py  validator.py
bot/keyboards/: inline.py  reply.py
bot/ollama/: api.py  dto.py
bot/routers/: admin_control.py  common.py  completion.py  cron.py  memory_kb.py  monitors.py  news_weather.py  notes.py  reminders.py  reports_admin.py  settings.py  start.py  tasks.py
bot/services/: briefing.py  digest.py  documents.py  images.py  kb.py  kb_extract.py  news_categories.py  ollama_semaphore.py  profile.py  reminder_completion.py  reminder_suggest.py  reminders.py  retention.py  rss_news.py  supervisor.py  voice.py  weather.py
scripts/: install_deps.sh  install_utils.sh  menu.py  supervisor_watchdog.py  warmup_whisper.py
tests/: conftest.py
tests/handlers/: test_smart.py
tests/intent/: test_context.py  test_executor.py  test_regression.py  test_router.py  test_schemas.py  test_tools.py  test_validator.py
tests/routers/: test_admin.py  test_admin_control.py  test_common.py  test_completion.py  test_completion_documents.py  test_completion_images.py  test_cron.py  test_memory_pagination.py  test_settings.py
tests/services/: test_kb.py  (+14 more)
(+11 files in other folders)
