[tool.poetry]
name = "ollama-telegram-bot"
version = "0.2.0"
description = "Telegram bot powered by Ollama Cloud / local Ollama with chat memory, reminders, web search and monitoring"
authors = ["mmovsesyan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.16.0"
aiohttp = "^3.9.0"
apscheduler = "^3.10.4"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
