[tool.poetry]
name = "ollama-telegram-bot"
version = "0.2.0"
description = "Telegram bot powered by Ollama Cloud / local Ollama with chat memory, reminders, web search and monitoring"
authors = ["mmovsesyan"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.16.0"
aiohttp = "^3.9.0"
apscheduler = "^3.10.4"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
faster-whisper = "^1.1.1"
pypdf = "^5.0.0"
python-docx = "^1.1.0"
openpyxl = "^3.1.0"
feedparser = "^6.0.11"
duckduckgo-search = "^7.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
bandit = "^1.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
